--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ nav {
 }
 
 #content {
-  /* ASSET background-image: url('assets/newdoodles.svg'); */
+  background-image: url("assets/background.png");
   background-size: cover;
   height: 100vh;
   flex: 1;
