--- a/style.css
+++ b/style.css
@@ -1,25 +1,23 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:400,800i");
 
-
 @font-face {
-    font-family: 'EarthOrbiter';
-    src: url('./assets/EarthOrbiter/EarthOrbiter-YZ12.otf');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "EarthOrbiter";
+  src: url("./assets/EarthOrbiter/EarthOrbiter-YZ12.otf");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Ubuntu';
-    src: url('./assets/Ubuntu/Ubuntu-Light.ttf');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Ubuntu";
+  src: url("./assets/Ubuntu/Ubuntu-Light.ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
-div{
-    font-family: 'Ubuntu';
-    font-weight: normal;
-    font-style: normal;
+div {
+  font-family: "Ubuntu";
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
@@ -148,10 +146,20 @@ section:not(#home) > div {
   padding: 2em 3em;
 }
 
-section:not(#home) h1 {
-  font-family: 'EarthOrbiter';
-  font-size: 3em;
-  text-decoration: none;
+@media screen and (min-width: 601px) {
+  section:not(#home) h1 {
+    font-family: "EarthOrbiter";
+    font-size: 3em;
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  section:not(#home) h1 {
+    font-family: "EarthOrbiter";
+    font-size: 2em;
+    text-decoration: none;
+  }
 }
 
 section:not(#home) p {
@@ -233,7 +241,7 @@ h3 {
 }
 
 #home h3 {
-  font-size: .8em;
+  font-size: 0.8em;
 }
 
 #splash-text > h1 {
@@ -379,7 +387,6 @@ h3 {
     margin: 0;
   }
 
-
   #hamburger-label {
     background-color: rgb(0, 0, 0);
     display: block;
@@ -419,7 +426,7 @@ h3 {
     margin-left: 0;
     transition: 0.5s all;
     /*background-color: rgba(0, 0, 0, 0.9);*/
-    background-color: #29223C;
+    background-color: #29223c;
     height: 100vh;
     top: 0;
   }
@@ -429,10 +436,7 @@ h3 {
   }
 
   nav a:hover {
-    color: linear-gradient(
-    to right,
-    #FF7BAC,
-    #FD9675  );
+    color: linear-gradient(to right, #ff7bac, #fd9675);
   }
 
   #hamburger-input:checked ~ ul {
@@ -626,8 +630,20 @@ section:not(#home) > div {
   padding: 2em 3em;
 }
 
-section:not(#home) h1 {
-  font-size: 3em;
+@media screen and (min-width: 601px) {
+  section:not(#home) h1 {
+    font-family: "EarthOrbiter";
+    font-size: 3em;
+    text-decoration: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  section:not(#home) h1 {
+    font-family: "EarthOrbiter";
+    font-size: 2em;
+    text-decoration: none;
+  }
 }
 
 section:not(#home) p {
