--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ h3 {
 
 #countdown span::after {
   content: attr(id);
-  font-size: 0.25em;
+  font-size: 0.5em;
   display: block;
 }
 
@@ -896,6 +896,52 @@ h3 {
   transform: scale(1.05) rotate(2deg);
 }
 
+/* Footer */
+#footer {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  bottom: 0;
+  padding: 1em;
+  left: 0;
+  right: 0;
+  color: white;
+  z-index: 10000;
+  margin-top: 2em;
+  color: white;
+  clear: both;
+}
+
+#footer > div:nth-child(1) {
+  width: 100%;
+  display: flex;
+  padding: 1em 0.5em 1em 0.5em;
+  justify-content: space-around;
+}
+
+#social {
+  display: flex;
+  z-index: 1000;
+}
+
+#social img {
+  height: 2em;
+}
+
+#social a {
+  padding: 0.125 0.25em 0.125 0.25em;
+}
+
+#footer > div:nth-child(2) {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 @media only screen and (max-width: 1100px) {
   #about .container {
     /*flex-direction: column-reverse;*/
@@ -1028,6 +1074,12 @@ h3 {
   .register div {
     margin-bottom: 3em;
   }
+
+  #footer {
+    padding-top: 4.5em;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media only screen and (max-width: 580px) {
@@ -1050,5 +1102,11 @@ h3 {
   #home {
     height: 120%;
     margin-bottom: 3em;
+  }
+
+  #footer {
+    padding-top: 4em;
+    justify-content: center;
+    align-items: center;
   }
 }
