--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ h3 {
   text-align: center;
   width: 100%;
   height: 100%;
-  margin-bottom: 3em;
+  margin-bottom: 2em;
   position: relative;
   margin: 0;
   align-content: center;
@@ -302,14 +302,18 @@ h3 {
 }
 
 #bucket {
-  display: block;
+  display: inline;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
 #countdown {
-  margin: 2.5em;
+  /* margin: 2.5em; */
   text-align: center;
   float: right;
-  margin-bottom: 0.5em;
+  /* margin-bottom: 1em; */
+  margin-right: 3em;
 }
 
 #countdown div {
@@ -320,7 +324,7 @@ h3 {
   padding: 0.75em;
   padding-bottom: 1.25em;
   font-size: 2.5em;
-  float: left;
+  float: right;
   display: inline-block;
   text-align: center;
 }
@@ -335,15 +339,19 @@ h3 {
 }
 
 .register {
-  height: 1.5em;
-  margin: 1.5em;
   background-color: rgba(0, 0, 0, 0.95);
-  padding: 1em;
-  font-size: 1.5em;
+  padding: 0.5em 1em 0.5em 1em;
+  font-size: 1.25em;
   float: left;
-  margin-left: 2.5em;
-  margin-top: 2.5em;
   text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  margin-left: 3em;
+}
+
+.register a {
+  width: 1em;
 }
 
 .register:hover {
@@ -415,9 +423,8 @@ h3 {
 
 /* Footer */
 #footer {
-  color: var(--text-dark-bg);
-  height: 200px;
-  background: var(--bg-dark);
+  height: 5em;
+  padding: 1em 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -436,12 +443,12 @@ h3 {
 }
 
 #social img {
-  height: 35px;
+  height: 2em;
 }
 
 #social a {
-  height: 35px;
-  padding: 0 5px 0 5px;
+  height: 2em;
+  padding: 1em 0.5em 1em 0.5em;
 }
 
 #footer > div:nth-child(2) {
@@ -463,6 +470,7 @@ h3 {
 
   #countdown {
     font-size: 0.7em;
+    padding-bottom: 2em;
     /*text-align: center;*/
   }
 
@@ -560,7 +568,7 @@ h3 {
     display: block;
   }
   .col:not(.track-description) {
-    font-size: 0.25em;
+    font-size: 0.5em;
     /* text-align: center; */
   }
   .col:not(.track-description) p {
@@ -570,7 +578,7 @@ h3 {
 
   .track-text p {
     background-color: black;
-    font-size: 0.25em;
+    font-size: 0.75em;
   }
   .sponsor-container {
     display: block;
@@ -600,5 +608,20 @@ h3 {
   #countdown div.register {
     width: 80%;
     float: initial;
+  }
+
+  .register {
+    margin-left: 2em;
+  }
+
+  #faq p:nth-of-type(2n - 1) {
+    font-size: 1em;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  
+  #faq p:nth-of-type(2n) {
+    font-size: 0.75em;
+    padding-bottom: 0.5em;
   }
 }
