--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ h3 {
 }
 
 #bucket {
-  display: inline;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   overflow: hidden;
@@ -324,7 +324,6 @@ h3 {
   padding: 0.75em;
   padding-bottom: 1.25em;
   font-size: 2.5em;
-  float: right;
   display: inline-block;
   text-align: center;
 }
@@ -342,16 +341,12 @@ h3 {
   background-color: rgba(0, 0, 0, 0.95);
   padding: 0.5em 1em 0.5em 1em;
   font-size: 1.25em;
-  float: left;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+  margin: auto;
   width: fit-content;
-  margin-left: 3em;
 }
 
 .register a {
-  width: 1em;
+  width: 2em;
 }
 
 .register:hover {
@@ -599,6 +594,7 @@ h3 {
 
   #countdown {
     text-align: center;
+    margin: auto;
   }
 
   #countdown div:not(.register) {
@@ -608,10 +604,6 @@ h3 {
   #countdown div.register {
     width: 80%;
     float: initial;
-  }
-
-  .register {
-    margin-left: 2em;
   }
 
   #faq p:nth-of-type(2n - 1) {
