--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
 #track-container {
   padding-bottom: 20%;
   margin-bottom: 6em;
+  display: inline-block;
 }
 
 .col {
@@ -196,8 +197,8 @@ section:not(#home) p {
 }
 
 #tracks .container .col .container .col:not(.track-description) {
-  margin: auto 0;
-  font-size: 1.25em;
+  /* margin: auto 0; */
+  font-size: 1.5em;
 }
 
 #tracks .container .col:not(:first-of-type) .container {
@@ -210,17 +211,18 @@ section:not(#home) p {
 
 .col.track-description {
   flex: 2;
+  margin-top: 1em;
 }
 
 #tracks .container .container .col p {
   font-family: "EarthOrbiter";
 }
 
-#tracks .container .container .col {
+#tracks .container .container .col:not(.track-title) {
   transition: 0.25s all;
 }
 
-#tracks .container .container:hover .col {
+#tracks .container .container:hover .col:not(.track-title) {
   opacity: 0;
 }
 
@@ -229,7 +231,7 @@ section:not(#home) p {
 }
 
 .track-text {
-  font-size: 0.8em;
+  font-size: 1.2em;
   position: absolute;
   top: 0;
   left: 0;
@@ -251,7 +253,7 @@ section:not(#home) p {
   vertical-align: middle;
 }
 
-li {
+nav li {
   list-style: none;
 }
 
@@ -562,6 +564,10 @@ h3 {
     position: relative;
     top: -0.25em;
   }
+
+  .track-text {
+    font-size: 0.75em;
+  }
 }
 
 @media only screen and (max-width: 700px) {
@@ -586,8 +592,8 @@ h3 {
     margin-bottom: 2em;
   }
   .track-text {
-    font-size: 1.2em;
-    text-align: center;
+    font-size: 1em;
+    /* text-align: center; */
   }
   .sponsor-container {
     display: block;
@@ -645,6 +651,14 @@ h3 {
   #faq p:nth-of-type(2n) {
     font-size: 0.75em;
     padding-bottom: 0.5em;
+  }
+
+  .track-title {
+    margin-bottom: 1.2em;
+  }
+
+  .track-text {
+    margin-top: 1.75em;
   }
 
 }
